# vulkan-engine

./: .gitignore  CMakeLists.txt  README.md  run.cmdr  run.ps1  run.sh
docs/: notes.org  todo.org
src/: CMakeLists.txt  entry.cpp  entry.hpp  main.cpp
src/game/: CMakeLists.txt  camera.cpp  camera.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp
src/math/: CMakeLists.txt  math.cpp  math.hpp  matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  vector.cpp  vector.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/networking/: CMakeLists.txt  networking.cpp  networking.hpp
src/physics/: CMakeLists.txt  physics.cpp  physics.hpp
src/renderer/: CMakeLists.txt  input.cpp  input.hpp  renderer-core.hpp  renderer-vulkan.cpp  renderer-vulkan.hpp  renderer.cpp  renderer.hpp
src/scene/: camera.hpp  scene.cpp
src/scenes/: scene.hpp
src/shaders/: basic.frag  basic.vert  env.frag  env.vert
src/threads/: CMakeLists.txt  threads.cpp  threads.hpp
src/ui/: CMakeLists.txt  ui.cpp  ui.hpp
src/util/: CMakeLists.txt  constants.hpp  defines.hpp  logger.hpp  util.cpp  util.hpp
